[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "processing-gateway"
version = "0.1.0"
description = "Training payment processing gateway with idempotency, webhooks, and reconciliation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.0,<3.0",
    "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/processing_gateway"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
